fixed some bugs in updateDevice/Variable
